--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -13,11 +13,11 @@
   border-bottom: 2px solid black;
 }
 
-h5:hover {
-  /* border: 2px solid #888888; */
-  /* box-shadow: 0px 0px 0px 2px #888888; */
-  /* cursor: pointer; */
-}
+/* h5:hover {
+  border: 2px solid #888888;
+  box-shadow: 0px 0px 0px 2px #888888;
+  cursor: pointer;
+} */
 
 div.col {
   margin-top: 1vh;
